# website

./: .gitignore  LICENSE  README.md  netlify.toml  pelicanconf.py  publishconf.py  pyproject.toml  uv-shim.sh
content/: .gitignore
content/pages/: index.md
themes/ramblin-simple/static/: style.css
themes/ramblin-simple/templates/: base.html  index.html
