[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.8.2",
    "pelican>=4.11.0",
    "typogrify>=2.1.0",
]

[tool.taskipy.tasks]
build = "pelican content -o output -s publishconf.py"
serve = "pelican --listen --autoreload"
clean = "rm -r output"

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
